--- a/ProAcc/Asset/css/ErrorStyle.css
+++ b/ProAcc/Asset/css/ErrorStyle.css
@@ -15,7 +15,7 @@
     }
 
 .four_zero_four_bg {
-    background-image: url('/Asset/images/dribbble_1.gif');
+    background-image: url('../images/dribbble_1.gif');
     height: 400px;
     background-position: center;
 }
