--- a/ProAcc/Views/ProjectCreation/Create.cshtml
+++ b/ProAcc/Views/ProjectCreation/Create.cshtml
@@ -3,7 +3,13 @@
     ViewBag.Title = "Create";
     Layout = "~/Views/shared/_Layout.cshtml";
 }
-
+<script>
+    window.scroll({
+        top: 0,
+        left: 0,
+        behavior: 'smooth'
+    });
+</script>
 
 @Html.Partial("_ProjectCreationCreate")
 @*@Html.Partial("_ProjectCreationIndex")*@
