--- a/ProAcc/Views/User/CreateUsers.cshtml
+++ b/ProAcc/Views/User/CreateUsers.cshtml
@@ -74,7 +74,7 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            @*<div class="form-group">
                     <label class="control-label col-md-4 required">Phone Number</label>
                     <div class="col-md-10">
                         <input type="text" class="form-control" maxlength="10" id="txtMob" />
@@ -82,18 +82,19 @@
                     <div>
                         &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblMob1">&nbsp;</span>
                     </div>
-            </div>
+            </div>*@
 
-            @*<div class="form-group">
+            <div class="form-group">
                 <label class="control-label col-md-5 required">Contact Person Phone</label>
                 <div class="col-md-10">
+                    <input type="hidden" class="form-control" id="selectedCountry">
                     <input type="tel" class="form-control" id="txtMob" style="width: 150%;">
                 </div>
                 <div>
                     &nbsp;&nbsp;&nbsp; <span id="valid-msg" class="hide Class_span">&nbsp;</span>
                     &nbsp;&nbsp;&nbsp;<span id="error-msg" class="hide Class_span">&nbsp;</span>
                 </div>
-            </div>*@
+            </div>
 
             <div class="form-group">
                 <label class="control-label col-md-4 required">User Type</label>
@@ -257,59 +258,68 @@
             }
          });
 
-        $("#txtMob").blur(function () {
+        //$("#txtMob").blur(function () {
 
-            phone = $(this).val();
-            phone = phone.replace(/[^0-9]/g,'');
-            if (phone.length != 10) {
-                $("#lblMob1").html("Phone number must be 10 digits").show().fadeOut(2000);
-                SubmitConsultant();
+        //    phone = $(this).val();
+        //    phone = phone.replace(/[^0-9]/g,'');
+        //    if (phone.length != 10) {
+        //        $("#lblMob1").html("Phone number must be 10 digits").show().fadeOut(2000);
+        //        SubmitConsultant();
+        //    }
+        //    else {
+        //        $("#lblMob1").html("").hide();
+        //        SubmitConsultant();
+        //    }
+        //});
+
+     var input = document.querySelector("#txtMob"),
+        errorMsg = document.querySelector("#error-msg"),
+        validMsg = document.querySelector("#valid-msg");
+
+    // Error messages based on the code returned from getValidationError
+    var errorMap = ["Invalid number", "Invalid country code", "Too short", "Too long", "Invalid number"];
+
+    var intl = window.intlTelInput(input, {
+       
+        utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/js/utils.js"
+        //utilsScript: "js/utils.js"
+    });
+
+    var reset = function() {
+        input.classList.remove("error");
+        errorMsg.innerHTML = "";
+        errorMsg.classList.add("hide");
+        validMsg.classList.add("hide");
+        };
+   
+        var countryCode;
+        input.addEventListener('countrychange', function () {
+            countryCode = intl.getSelectedCountryData().iso2;
+            $("#selectedCountry").val(countryCode);
+           //alert(countryCode)
+        })
+
+    // Validate on blur event
+        input.addEventListener('blur', function () {
+            //debugger;
+        reset();
+        if(input.value.trim()){
+            if(intl.isValidNumber()){
+                validMsg.classList.remove("hide");
+               
+            }else{
+                input.classList.add("error");
+                var errorCode = intl.getValidationError();
+                errorMsg.innerHTML = errorMap[errorCode];
+                errorMsg.classList.remove("hide");
             }
-            else {
-                $("#lblMob1").html("").hide();
-                SubmitConsultant();
-            }
-        });
+        }
+          validatecustomer();
+    });
 
-    //    var input = document.querySelector("#txtMob"),
-    //    errorMsg = document.querySelector("#error-msg"),
-    //    validMsg = document.querySelector("#valid-msg");
-
-    //// Error messages based on the code returned from getValidationError
-    //var errorMap = ["Invalid number", "Invalid country code", "Too short", "Too long", "Invalid number"];
-
-    //var intl = window.intlTelInput(input, {
-    //   utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/js/utils.js"
-    //    //utilsScript: "~/Asset/js/utils.js"
-    //});
-
-    //var reset = function() {
-    //    input.classList.remove("error");
-    //    errorMsg.innerHTML = "";
-    //    errorMsg.classList.add("hide");
-    //    validMsg.classList.add("hide");
-    //};
-
-    //// Validate on blur event
-    //    input.addEventListener('blur', function () {
-
-    //    reset();
-    //    if(input.value.trim()){
-    //        if(intl.isValidNumber()){
-    //            validMsg.classList.remove("hide");
-    //        }else{
-    //            input.classList.add("error");
-    //            var errorCode = intl.getValidationError();
-    //            errorMsg.innerHTML = errorMap[errorCode];
-    //            errorMsg.classList.remove("hide");
-    //        }
-    //    }
-
-    //});
-
-    //// Reset on keyup/change event
-    //input.addEventListener('change', reset);
-    //input.addEventListener('keyup', reset);
+    // Reset on keyup/change event
+    input.addEventListener('change', reset);
+    input.addEventListener('keyup', reset);
 
         $("#Passwd,#txtConsCnfmPassword").bind('copy paste cut', function (e) {
             e.preventDefault();
@@ -436,6 +446,7 @@
     $("#btnConsultantCreate").on("click", function () {
 
         var Name1 = $("#txtName1").val();
+        var SelectedCountrycode = $("#selectedCountry").val();
         var Mob = $("#txtMob").val();
         var Email1 = $("#txtEmail1").val();
         var LoginID = $("#LoginID").val();
@@ -473,7 +484,7 @@
                 type: "POST",
                 url: '@Url.Action("Create","User")',
                 //data: { Company_Name: CompanyName, IndustrySector_ID: IndustrySector, Phone: custphone, Email: custEmail ,Contact:Contact},
-                data: { Name: Name1, EMail: Email1, Phone: Mob, LoginId: LoginID, Password: Passwd, RoleID: RoleID, UserTypeID: UserTypeID, Customer_Id:Customer_Id },
+                data: { Name: Name1, EMail: Email1, Phone: Mob, LoginId: LoginID, Password: Passwd, RoleID: RoleID, UserTypeID: UserTypeID, Customer_Id:Customer_Id,Countrycode: SelectedCountrycode },
                     success: function (response) {
                         if (response == "success") {
                             Notiflix.Notify.Success('User Saved successfully..!', { cssAnimationStyle: 'zoom', cssAnimationDuration: 500, });
