overall task and prjt monitor

--- a/ProAcc/Views/Activity/_ActivityCreationCreate.cshtml
+++ b/ProAcc/Views/Activity/_ActivityCreationCreate.cshtml
@@ -261,7 +261,7 @@
     }
 
     $("#btnActivityCreCreate").on("click", function () {
-        debugger;
+       // debugger;
         var Task = $("#txtTask").val();
        // var sequence = $("#txtSequence").val();
         //var ApplicationArea = $("#txtApplicationArea").val();
@@ -347,7 +347,7 @@
     });
 
     $("#btnSeq").on("click", function () {
-        debugger;
+        //debugger;
         var LatestTaskId = $("#hiddenActivityId").val();
         var LastTaskId = $("#drpTsk").val();
         var type = $("#drpPhase").val();
