--- a/ProAcc/Views/Report/AuditReports.cshtml
+++ b/ProAcc/Views/Report/AuditReports.cshtml
@@ -40,7 +40,7 @@
             </div>
 
             <div class="col-md-2">
-                <label for="exampleEmail" class="">Table Name</label>
+                <label for="exampleEmail" class="">Table</label>
                 <input type="text" id="tablename" class="form-control"/>
             </div>
 
