--- a/ProAcc/Views/Report/_AuditReportIndex.cshtml
+++ b/ProAcc/Views/Report/_AuditReportIndex.cshtml
@@ -13,8 +13,8 @@
             <th>Table</th>
             <th>Summary</th>
             <th>Action</th>
-            <th>Action on</th>
-            <th>Action BY</th>
+            <th style="width:67px">Action on</th>
+            <th style="width:71px">Action BY</th>
         </tr>
     </thead>
     <tbody>
